WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293041
CoreAudioSharedUnit constructor should not create Timer directly
https://bugs.webkit.org/show_bug.cgi?id=293041
Summary
CoreAudioSharedUnit constructor should not create Timer directly
youenn fablet
Reported
2025-05-15 02:19:56 PDT
CoreAudioSharedUnit constructor should not create Timer directly
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-05-15 02:20:11 PDT
<
rdar://problem/151369760
>
youenn fablet
Comment 2
2025-05-15 02:35:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45427
EWS
Comment 3
2025-05-15 08:51:17 PDT
Committed
294965@main
(a9b27d355d14): <
https://commits.webkit.org/294965@main
> Reviewed commits have been landed. Closing PR #45427 and removing active labels.
EWS
Comment 4
2025-05-16 09:29:52 PDT
Committed
289651.522@safari-7621-branch
(c139be635040): <
https://commits.webkit.org/289651.522@safari-7621-branch
> Reviewed commits have been landed. Closing PR #3102 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug