CoreAudioSharedUnit constructor should not create Timer directly rdar://151369760 https://bugs.webkit.org/show_bug.cgi?id=293041

Reviewed by Eric Carlson.

CoreAudioSharedUnit may be instantiated in UIProcess when getUserMedia is called.
In that case, if WebThread is used, CoreAudioSharedUnit constructor will trigger a release assert from the Timer constructor.

To prevent this, we lazy initialize all Timer CoreAudioSharedUnit members.

Covered by added API test.

* Source/WebCore/platform/mediastream/mac/CoreAudioSharedUnit.cpp:
(WebCore::CoreAudioSharedUnit::CoreAudioSharedUnit):
(WebCore::CoreAudioSharedUnit::startInternal):
(WebCore::CoreAudioSharedUnit::isProducingMicrophoneSamplesChanged):
(WebCore::CoreAudioSharedUnit::updateMutedState):
(WebCore::CoreAudioSharedUnit::verifyIsCapturing):
(WebCore::CoreAudioSharedUnit::stopInternal):
* Source/WebCore/platform/mediastream/mac/CoreAudioSharedUnit.h:
* Tools/TestWebKitAPI/Tests/WebKit/GetUserMedia.mm:
(TestWebKitAPI::(WebKit, GetUserMediaWithWebThread)):

Canonical link: https://commits.webkit.org/294965@main